--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "chai": "^4.3.6",
+    "cors": "^2.8.5",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
+    "express": "^4.18.1",
     "hardhat": "^2.8.4",
     "ipfs-http-client": "^56.0.1",
     "jquery": "^3.6.0",
     "liquid-button": "^0.1.9",
+    "mongoose": "^6.3.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
